<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/medium_spacing"
    android:layout_gravity="center">
    <TextView
        android:id="@+id/nameOfActivity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:contentDescription="@string/activity_name"
        android:text="@string/activity_name"
        android:gravity="center"/>
    <EditText
        android:id="@+id/activity_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:contentDescription="@string/how_long"
        android:text="@string/how_long"
        android:gravity="center"/>
    <EditText
        android:id="@+id/how_long_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:contentDescription="@string/added_water_intake"
        android:text="@string/added_water_intake"
        android:gravity="center"/>
    <EditText
        android:id="@+id/added_water_intake_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="end">
        <Button
            android:id="@+id/delete_activity_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/delete"
            android:background="@android:color/transparent"/>
        <Button
            android:id="@+id/create_edit_activity_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/create"
            android:background="@android:color/transparent"/>
        <Button
            android:id="@+id/create_edit_activity_cancel_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            android:background="@android:color/transparent"/>
    </LinearLayout>

</LinearLayout>