<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/medium_spacing"
    android:layout_gravity="center">
    <TextView
        android:id="@+id/nameOffluid"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:contentDescription="@string/fluid_name"
        android:text="@string/fluid_name"
        android:gravity="center"/>
    <EditText
        android:id="@+id/fluid_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:contentDescription="@string/fluid_amount"
        android:text="@string/fluid_amount"
        android:gravity="center"/>
    <EditText
        android:id="@+id/water_amount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="end">
        <Button
            android:id="@+id/delete_fluid_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/delete"
            android:background="@android:color/transparent"/>
        <Button
            android:id="@+id/create_edit_fluid_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add"
            android:background="@android:color/transparent"/>
        <Button
            android:id="@+id/create_edit_fluid_cancel_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            android:background="@android:color/transparent"/>
    </LinearLayout>

</LinearLayout>