<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/medium_spacing"
    android:layout_gravity="center">
    <TextView
        android:id="@+id/provide_old_pass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:contentDescription="@string/provide_new_pass"
        android:text="@string/provide_old_pass"
        android:gravity="center"/>
    <EditText
        android:id="@+id/provide_old_pass_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"/>
    <TextView
        android:id="@+id/provide_new_pass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:contentDescription="@string/provide_new_pass"
        android:text="@string/provide_new_pass"
        android:gravity="center"/>
    <EditText
        android:id="@+id/provide_new_pass_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="end">
        <Button
            android:id="@+id/change_pass_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/okay"
            android:background="@android:color/transparent"/>
        <Button
            android:id="@+id/change_pass_cancel_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            android:background="@android:color/transparent"/>
    </LinearLayout>

</LinearLayout>