<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/fab_margin"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="itp341.liang.briana.finalproject.OverviewFragment">
    <LinearLayout
        android:id="@+id/goal_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/target_goal"
            style="@style/TextAppearance.AppCompat.Medium"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="end">
            <TextView
                android:id="@+id/daily_goal_progress_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/TextAppearance.AppCompat.Medium"
                android:text="@string/zero"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/TextAppearance.AppCompat.Medium"
                android:text="@string/slash"/>
            <TextView
                android:id="@+id/daily_goal_total_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/TextAppearance.AppCompat.Medium" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/TextAppearance.AppCompat.Medium"
                android:layout_marginLeft="@dimen/small_spacing"
                android:text="@string/oz"/>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/progress_layout"
        android:layout_below="@id/goal_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginBottom="@dimen/medium_spacing">
        <ProgressBar
            android:id="@+id/daily_goal_progress_bar"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:progressTint="@color/colorPrimary"
            android:progressBackgroundTint="@color/colorPrimaryDark"/>
    </LinearLayout>

    <GridLayout
        android:id="@+id/grid_layout"
        android:layout_below="@+id/progress_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:columnCount="3"
        android:background="@color/white"
        android:rowCount="3"
        android:orientation="horizontal">
        <ImageView
            android:layout_width="@dimen/image_size"
            android:layout_height="@dimen/image_size"
            android:layout_columnWeight="1"
            android:src="@drawable/morning"
            android:contentDescription="@string/morning"/>
        <ImageView
            android:layout_width="@dimen/image_size"
            android:layout_height="@dimen/image_size"
            android:layout_columnWeight="1"
            android:src="@drawable/afternoon"
            android:contentDescription="@string/afternoon"/>
        <ImageView
            android:layout_width="@dimen/image_size"
            android:layout_height="@dimen/image_size"
            android:layout_columnWeight="1"
            android:src="@drawable/evening"
            android:contentDescription="@string/evening"/>
        <TextView
            android:id="@+id/morning_ounces_text"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:gravity="center"
            style="@style/TextAppearance.AppCompat.Medium"
            android:text="@string/zero"/>
        <TextView
            android:id="@+id/afternoon_ounces_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            style="@style/TextAppearance.AppCompat.Medium"
            android:gravity="center"
            android:text="@string/zero"/>
        <TextView
            android:id="@+id/evening_ounces_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:gravity="center"
            style="@style/TextAppearance.AppCompat.Medium"
            android:text="@string/zero"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:gravity="center"
            android:text="@string/morning"
            style="@style/TextAppearance.AppCompat.Medium"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:gravity="center"
            android:text="@string/afternoon"
            style="@style/TextAppearance.AppCompat.Medium"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:gravity="center"
            android:text="@string/evening"
            style="@style/TextAppearance.AppCompat.Medium"/>
    </GridLayout>
    <TextView
        android:id="@+id/fluid_list_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/grid_layout"
        android:layout_marginTop="@dimen/medium_spacing"
        android:text="@string/fluid_list_label"
        style="@style/TextAppearance.AppCompat.Medium"
        android:textAlignment="center"/>
    <ListView
        android:id="@+id/fluid_list_view"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_below="@id/fluid_list_label">
    </ListView>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/add_drink_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        app:srcCompat="@drawable/ic_local_drink_black_24dp" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/add_drink_btn"
        android:layout_centerHorizontal="true"
        android:text="@string/add_fluid"/>
</RelativeLayout>
