<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="itp341.liang.briana.finalproject.SetUpProfileActivity">
    <android.support.design.widget.AppBarLayout
        android:id="@+id/toolbar_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay"
        app:elevation="0dp">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </android.support.design.widget.AppBarLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="@dimen/fab_margin">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="@dimen/medium_spacing">
            <TextView
                android:layout_width="@dimen/set_up_text_width"
                android:layout_height="wrap_content"
                android:text="@string/username_text"
                android:gravity="center_vertical"
                style="@style/Base.TextAppearance.AppCompat.Medium"/>
            <TextView
                android:id="@+id/username_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/Base.TextAppearance.AppCompat.Medium"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="@dimen/set_up_text_width"
                android:layout_height="match_parent"
                android:text="@string/weight_text"
                android:gravity="center_vertical"
                style="@style/Base.TextAppearance.AppCompat.Medium"/>
            <EditText
                android:id="@+id/weight_field"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/Base.TextAppearance.AppCompat.Medium"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="@dimen/fab_margin">
            <TextView
                android:layout_width="@dimen/set_up_text_width"
                android:layout_height="match_parent"
                android:text="@string/water_goal_text"
                android:gravity="center_vertical"
                style="@style/TextAppearance.AppCompat.Medium"/>
            <EditText
                android:id="@+id/daily_water_goal_field"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/TextAppearance.AppCompat.Medium"/>
        </LinearLayout>
        <Button
            android:id="@+id/finish_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorAccent"
            android:text="@string/finish"
            android:textColor="@android:color/black"/>
    </LinearLayout>
</LinearLayout>
